[package]
name = "valet"
version = "0.1.0"
authors = ["Amos Wenger <amoswenger@gmail.com>"]
edition = "2018"

[profile.release]
debug = true

[lib]
crate-type = ["cdylib"]

[dependencies]
libbutler = { path = "./libbutler" }
napi = { path = "./napi" }
log = "0.4.8"
simple_logger = { version = "1.6.0", default-features = false }

[target.'cfg(windows)'.dependencies]
napi_stub = { path = "./napi_stub" }

[build-dependencies]
tinyjson = "2.1.1"
