[package]
name = "valet"
version = "1.2.0"
authors = ["Amos Wenger <amoswenger@gmail.com>"]
edition = "2018"

[profile.release]
debug = true

[lib]
crate-type = ["cdylib"]

[dependencies]
libbutler = { path = "./libbutler" }
napi = { path = "./napi" }
log = "0.4.8"
simple_logger = { version = "1.6.0", default-features = false }
tokio = { version = "0.2.21", features = ["sync", "rt-core", "rt-util", "rt-threaded", "macros"] }
selfupdate = { path = "./selfupdate" }
futures = "0.3.5"

[target.'cfg(windows)'.dependencies]
napi_stub = { path = "./napi_stub" }

[build-dependencies]
tinyjson = "2.1.1"
