[package]
name = "ara"
version = "0.1.0"
authors = ["Amos Wenger <amoswenger@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.36"
futures = "0.3.5"
thiserror = "1.0.20"
tracing = "0.1.18"
pin-project = "0.4.23"
lru_time_cache = "0.10.0"
bytes = "0.5.6"
