[package]
name = "napi_stub"
version = "0.1.0"
authors = ["Amos Wenger <amoswenger@gmail.com>"]
edition = "2018"

[build-dependencies]
cc = "1.0.50"
ra_syntax = { git = "https://github.com/rust-analyzer/rust-analyzer", rev = "7a9ba1657daa9fd90c639dcd937da11b4f526675" }
cargo_metadata = "0.9.1"

[dependencies]
nj-sys = "1.0.0"
