[package]
name = "valet"
version = "0.1.0"
authors = ["Amos Wenger <amoswenger@gmail.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node", "butler.dll", "libbutler.so", "libbutler.dylib"]

[lib]
name = "valet"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4.0"
cfg-if = "0.1.10"

[dependencies]
neon = "0.4.0"
