[package]
name = "selfupdate"
version = "0.1.0"
authors = ["Amos Wenger <amoswenger@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4.8"
thiserror = "1.0.20"
rand = "0.7.3"
futures-timer = "3.0.2"
reqwest = { version = "0.10.6", default-features = false, features = ["json", "gzip", "rustls-tls"] }
serde = { version = "1.0.114", features = ["derive"] }
once_cell = "1.4.0"
futures = "0.3.5"
backoff = "0.1.6"
backoff-futures = { path = "backoff-futures" }
