[package]
name = "unzip-sample"
version = "0.1.0"
authors = ["Amos Wenger <amoswenger@gmail.com>"]
edition = "2018"

[dependencies]
rc-zip = { path = "./rc-zip" }
tokio = { version = "0.2.22", features = ["full"] }
argh = "0.1.3"
url = "2.1.1"
htfs = { path = ".." }
eyre = "0.6.0"
color-eyre = "0.5.0"
tracing-error = "0.1.2"
tracing-subscriber = "0.2.9"
futures = "0.3.5"
humansize = "1.1.0"
async-compression = { version = "0.3.5", features = ["futures-io", "deflate"] }
tracing = "0.1.18"
nom = "5.1.2"
